# rockfish

./: .gitignore  Analysis.ipynb  LICENSE  README.md  setup.cfg
rockfish/: __main__.py  rf_format.py
rockfish/data/: download.py
rockfish/extract/: alignment.py  extract.py  fast5.py  main.py  pod5.py  writer.py
rockfish/extraction/: alignment.py  extract.py  fast5.py  main.py  writer.py
rockfish/model/: datasets.py  inference.py  iterative_inference.py  layers.py  model.py  models.py  rf_inference.py
rockfish/rftools/: convert_labels.py  convert_model.py  index.py  merge.py  sample.py
scripts/: calculate_site_freq.py  example.sh  extract_ref_pos.py  extract_training_examples.py
tests/: alignment.py
tests/data/: query.fa  query.txt  ref.fasta  ref_rev_comp.fasta
