[metadata]
name = lbcb-rockfish
version = 0.0.1
author = Dominik Stanojevic
description = Rockfish: Deep-learning based method for detaction of 5mC DNA modification

[options]
packages = find:
python_requires = >=3.9
install_requires =
    ont-fast5-api
    numpy
    mappy
    tqdm
    jsonargparse[signatures]
    torch >= 1.10.0
    pytorch-lightning >= 1.5.0

[options.entry_points]
console_scripts = 
    rockfish = rockfish.__main__:main