[metadata]
name = lbcb-rockfish
version = 0.0.2
author = Dominik Stanojevic
description = Rockfish: Deep-learning based method for detaction of 5mC DNA modification

[options]
packages = find:
python_requires = >=3.9
install_requires =
    ont-fast5-api
    numpy
    mappy
    tqdm
    jsonargparse[signatures]
    torch >= 2.1.0
    lightning >= 2.1.0
    wandb
    gdown
    polars

[options.entry_points]
console_scripts = 
    rockfish = rockfish.__main__:main
